// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersEditor for a multiple selection question toolbar contains move up/down and delete icons 1`] = `
<div class="layout justify-end toolbar" data-test="toolbar">
  <div class="flex toolbar-item"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <div class="flex toolbar-item"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <div class="flex toolbar-item"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <!---->
</div>
`;

exports[`AnswersEditor for a single selection question toolbar contains move up/down and delete icons 1`] = `
<div class="layout justify-end toolbar" data-test="toolbar">
  <div class="flex toolbar-item"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <div class="flex toolbar-item"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <div class="flex toolbar-item"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <!---->
</div>
`;

exports[`AnswersEditor for a true/false question renders empty toolbar 1`] = `
<div class="layout justify-end toolbar" data-test="toolbar">
  <!---->
</div>
`;

exports[`AnswersEditor for an input question toolbar contains only delete icon 1`] = `
<div class="layout justify-end toolbar" data-test="toolbar">
  <div class="flex toolbar-item"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
    </button><span class="v-tooltip v-tooltip--top"></span></div>
  <!---->
</div>
`;
